<resources>
    <string name="app_name">Covid-19</string>
    <string name="active_count"><![CDATA[<b>%s</b>  Active]]></string>
    <string name="confirm_count"><![CDATA[<b>%s</b>  Confirmed]]></string>
    <string name="death_count"><![CDATA[<b>%s</b>  Deaths]]></string>
    <string name="recovered_count"><![CDATA[<b>%s</b>  Recovered]]></string>
    <string name="day_active_count"><![CDATA[<b>%s</b>  Active (<b>%s</b> New)]]></string>
    <string name="day_confirm_count"><![CDATA[<b>%s</b>  Confirmed (<b>%s</b> New)]]></string>
    <string name="day_death_count"><![CDATA[<b>%s</b>  Deaths (<b>%s</b> New)]]></string>
    <string name="day_recovered_count"><![CDATA[<b>%s</b>  Recovered (<b>%s</b> New)]]></string>
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="about">About</string>
    <string name="map">Map View</string>
    <string name="home">Home</string>
    <string name="whatsapp">+41 22 501 76 55</string>
    <string name="covid_info">Coronavirus disease (COVID-19) is an infectious disease caused by a new virus. \n\nThe disease causes respiratory illness (like the flu) with symptoms such as a cough, fever, and in more severe cases, difficulty breathing. You can protect yourself by washing your hands frequently, avoiding touching your face, and avoiding close contact (1 meter or 3 feet) with people who are unwell</string>
    <string name="whatsapp_conversation">Click on the number to start WhatsApp conversation (WHO)</string>
    <string name="todo"><![CDATA[<b>HANDS</b> Wash them often<br><b>ELBOW</b> Cough into it<br><b>FACE</b> Don\'t touch it<br><b>SPACE</b> Keep safe distance<br><b>HOME</b> Stay if you can<br>]]></string>
    <string name="note">This is not Government app and we are not associated with the Government.</string>
    <string name="coronavirus_covid_19">Coronavirus (Covid-19)</string>
    <string name="today">Today</string>
    <string name="refresh">Refresh</string>
    <string name="developer">Developer</string>
    <string name="twitter">Twitter</string>
    <string name="latest_update">Latest Update</string>
    <string name="_30_days">30 Days</string>
    <string name="daily">Daily</string>
    <string name="cumulative">Cumulative</string>
    <string name="label_color">#6e6e6e</string>
    <string name="news">News</string>
    <string name="all">All</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="source_code">Source Code</string>
    <string name="helpful_links">Helpful links</string>
    <string name="helpful_links_by_states">Helpline Numbers [By State]</string>
    <string name="ministry_of_health">Ministry Of Health</string>
    <string name="who">WHO</string>
    <string name="who_whatsapp">WHO Whatsapp</string>
    <string name="other">Other</string>
    <string name="data_source">Data Source</string>
    <string name="notification">Notification</string>
    <string name="updates">Updates</string>
    <string name="state">State</string>
    <string name="active">Active</string>
    <string name="state_ut">State/UT</string>
    <string name="essentials">Essentials</string>
    <string name="filters">Filters</string>
    <string name="cities">Cities</string>
    <string name="categories">Categories</string>
    <string name="a11y_filter_applied">applied</string>
    <string name="a11y_filter_not_applied">not applied</string>
    <string name="deepdive">Deep dive</string>
</resources>
