<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="info.covid.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/notification"
        android:name="info.covid.notification.NotificationFragment"
        android:label="@string/updates"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/map"
        android:name="info.covid.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/about"
        android:name="info.covid.info.AboutFragment"
        android:label="@string/about" />

    <fragment
        android:id="@+id/state_wise_info"
        android:name="info.covid.state.StateWiseInfoFragment"
        android:label="{title}">
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>

</navigation>