<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/state"
            style="@style/AppTheme.StateSectionLabel"
            android:text="@string/state_ut"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/confirmed"
            style="@style/AppTheme.StateSectionLabel"
            android:text="@string/confirmed"
            app:layout_constraintLeft_toRightOf="@+id/state"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recovered"
            style="@style/AppTheme.StateSectionLabel"
            android:text="@string/recovered"
            app:layout_constraintLeft_toRightOf="@+id/confirmed"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/active"
            style="@style/AppTheme.StateSectionLabel"
            android:text="@string/active"
            app:layout_constraintLeft_toRightOf="@+id/recovered"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deaths"
            style="@style/AppTheme.StateSectionLabel"
            android:text="@string/deaths"
            app:layout_constraintLeft_toRightOf="@+id/active"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"
            app:layout_constraintTop_toBottomOf="@+id/state" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_50sdp"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>