<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.Html" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:drawableLeft="@drawable/ic_error"
                    android:drawablePadding="@dimen/_8sdp"
                    android:text="@string/note"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/covid_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/coronavirus_covid_19"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/covid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:text="@string/covid_info"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/source_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="Data Source"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="https://www.covid19india.org/"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/info_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="Coronavirus information - India"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/info1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="https://www.mohfw.gov.in/"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/whatsapp_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/whatsapp_conversation"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/whatsapp"
                    android:textColor="?colorAccent"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/developer_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/developer"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/_11ssp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/twitter"
                    android:textColor="?colorAccent"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>